--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <body>
 
 <h1>Understanding Git Repo</h1>
+<h1>Understanding MLOPS Repo</h1>
 <p style="color:red">Source version control</p>
 <button>Book Now</button>
 <button>Apply Now</button>
